--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,10 @@
 <h2>掲示板</h2>
-	<%= form_for(posts) do |f| %>
+	<%= form_for(@post) do |f| %>
 <h4>スレッド名</h4>
 	<%= f.text_field :title %>
 	<%= f.submit 'スレッドを立てる' %>
-	<%= end %>
+	<% end %>
 <h3>スレッド一覧</h3>
 	<% @posts.each do |post| %>
-	<p>post.title</p>
+	<p><%= link_to post.title,post_path(post.id) %></p>
 	<% end %>
