--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,10 @@
 <h2><%= @post.title %></h2>
+<h4><%= link_to "スレッド一覧へ",posts_path %></h4>
+	<%= form_for [@post, @post_comment] do |f| %>
+	<%= f.text_area :comment,placeholder: "コメントを投稿" %>
+	<%= f.submit "送信" %>
+	<% end %>
+<h3>スレッド一覧</h3>
+	<% @post_comments.each do |post_comment| %>
+	<p><%= post_comment.comment %></p>
+	<% end %>
