--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,7 @@
 <h2><%= @post.title %></h2>
+<h3><% @post.categories.each do |category| %></h3>
+<%= category.name %>
+<% end %>
 <h4><%= link_to "スレッド一覧へ",posts_path %></h4>
 	<%= form_for [@post, @post_comment] do |f| %>
 	<%= f.text_area :comment,placeholder: "コメントを投稿" %>
